<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">链时代</string>
	<string name="coding">正在开发中，尽情期待...</string>
	<string name="quit_app">再按一次退出程序</string>
	<string name="quit_success">退出程序</string>
    <string name="tv_submit">提交</string>
	
    <string name="dialog_progress">请稍候...</string>
    
    
    <string name="main_tab_market">行情</string>
    <string name="main_tab_asset">资产</string>
    <string name="main_tab_invest">理财</string>
    <string name="main_tab_my">我的</string>
    <string name="input_login_account_number">请输入账号</string>
    <string name="input_login_password">请输入密码</string>
    <string name="quick_login">登录</string>
    <string name="register">注册</string>
    <string name="forgetpassword">忘记密码</string>
    
    <string name="empty_username">帐号不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="request_error">请求异常...</string>
    <string name="response_json_error">服务器响应异常</string>
    <string name="login_error">登陆失败</string>
    
    <string name="result_error">请求异常</string>
    <string name="result_fail">请求失败，请稍候再试...</string>
    <string name="result_sendsms_success">短信发送成功</string>
    <string name="result_sendemail_success">邮箱发送成功</string>
    
    <string name="register_country">国家/地区</string>
    <string name="register_phone">请输入手机号码</string>
    <string name="register_email">请输入邮箱</string>
    <string name="register_sendsms">发送</string>
    <string name="register_password">请输入密码</string>
    <string name="register_phone_isempty">请输入手机号码</string>
    <string name="register_phone_issuccess">请输入正确的手机号码</string>
    <string name="register_email_isempty">请输入邮箱</string>
    <string name="register_email_issuccess">请输入正确的电子邮箱</string>
    <string name="register_password_double">请再次输入密码</string>
    <string name="register_sms_code">请输入验证码</string>
    <string name="register_password_empty">密码不能为空</string>
    <string name="register_password_equals">两次输入的密码不一致</string>
    <string name="register_sueecss">注册成功</string>
    <string name="register_check_email">切换到邮箱</string>
    <string name="register_check_mobile">切换到手机</string>
    <string name="register_verification_code_success">验证码正确</string>
    <string name="register_verification_code_fail">验证码失败</string>
    <string name="register_verification_code_empty">请输入验证码</string>
    <string name="register_mobile_email_empty">手机号码和邮箱不能为空</string>
    <string name="tv_next">下一步</string>
    
    <string name="my_assets">我的资产</string>
    <string name="my_invest">我的投资</string>
    <string name="my_security">安全中心</string>
    <string name="my_addressthin">地址薄</string>
    <string name="my_coin">默认货币</string>
    <string name="my_aboutus">关于我们</string>
    <string name="my_exit">退出登录</string>
    
    <string name="asset_right">></string>
    <string name="asset_total">总资产：</string>
    <string name="asset_yue">余额：</string>
    <string name="asset_invest">理财：</string>
    <string name="asset_add_token">添加币种</string>
    
    
</resources>
