<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
   		<RelativeLayout
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content">
   		    
   		   <EditText android:layout_width="match_parent"
   		        android:layout_height="wrap_content"
   		        style="@style/tv_padding_10"
   		        android:id="@+id/tv_email"
   		        android:layout_toLeftOf="@+id/tv_send"
   		        android:layout_alignParentLeft="true"
   		        android:inputType="textWebEmailAddress"
   		        android:hint="@string/register_email"/>
   		    
   		   <TextView android:layout_width="80dp"
   		       android:layout_height="wrap_content"
   		       style="@style/tv_padding_10"
   		       android:id="@+id/tv_send"
   		       android:gravity="center_horizontal"
   		       android:layout_alignParentRight="true"
   		       android:text="@string/register_sendsms"/>
   		</RelativeLayout>
   		<EditText android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    style="@style/tv_padding_10"
   		    android:id="@+id/et_smscode"
   		    android:hint="@string/register_sms_code"/>
   		 <TextView
   		        android:id="@+id/tv_next" 
   		        android:layout_width="match_parent"
   		        android:layout_height="wrap_content"
   		        android:text="@string/tv_next"
   		        style="@style/tv_padding_10"
   		        android:layout_margin="10dp"
   		        android:gravity="center_vertical|center_horizontal"/>
   		 
   		 
   		 <TextView android:layout_width="120dp"
   		     android:layout_height="wrap_content"
   		     style="@style/tv_padding_10"
   		     android:id="@+id/tv_check_mobile"
   		     android:text="@string/register_check_mobile">
   		     
   		 </TextView>
</LinearLayout>