<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    
    
    <FrameLayout
        android:id="@+id/fl_framelayout_content" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ededed"
        android:layout_above="@+id/rg_p_main_buttom">
    </FrameLayout>
    
    <RadioGroup 
        android:id="@+id/rg_p_main_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/partol_top_shape"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp">
        <RadioButton
            android:id="@+id/main_tab_asset" 
            style="@style/main_tab_bottom"
            android:text="@string/main_tab_asset"
            android:textSize="12sp"
            android:textColor="@color/txt_bottom_color_bg"/>
        <RadioButton
            android:id="@+id/main_tab_invest" 
            style="@style/main_tab_bottom"
            android:text="@string/main_tab_invest"
            android:textSize="12sp"
            android:textColor="@color/txt_bottom_color_bg"/>
        <RadioButton
            android:id="@+id/main_tab_market" 
            style="@style/main_tab_bottom"
            android:text="@string/main_tab_market"
            android:textSize="12sp"
            android:textColor="@color/txt_bottom_color_bg"/>
        
        <RadioButton
            android:id="@+id/main_tab_my" 
            style="@style/main_tab_bottom"
            android:text="@string/main_tab_my"
            android:textSize="12sp"
            android:textColor="@color/txt_bottom_color_bg"/>
    </RadioGroup>
</RelativeLayout>
