<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    	<LinearLayout  android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    
    	    <EditText 
    	        android:id="@+id/et_password"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        style="@style/tv_padding_10"
    	        android:hint="@string/register_password"
    	        android:inputType="textPassword"/>
    	    <EditText 
    	        android:id="@+id/et_db_password"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        style="@style/tv_padding_10"
    	        android:hint="@string/register_password_double"
    	        android:inputType="textPassword"/>
    	    
    	   <TextView
   		        android:id="@+id/tv_submit" 
   		        android:layout_width="match_parent"
   		        android:layout_height="wrap_content"
   		        android:text="@string/tv_submit"
   		        style="@style/tv_padding_10"
   		        android:layout_margin="10dp"
   		        android:gravity="center_vertical|center_horizontal"/>
    	    
    	</LinearLayout>
   		
</LinearLayout>