<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="@style/tv_padding_10"
	    android:orientation="horizontal">
	    <ImageView android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:src="@drawable/main_tab_my"/>
	    <TextView android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/tv_padding_10"
	        android:layout_gravity="center_vertical"
	        android:id="@+id/tv_user_name"/>
	</LinearLayout>
	
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/tv_padding_5">
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/main_tab_my"
	        android:id="@+id/im_assets_left"
	        android:layout_alignParentTop="true"/>
	    <TextView
	        android:id="@+id/tv_assets" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/im_assets_right"
	        android:layout_toRightOf="@+id/im_assets_left"
	        style="@style/tv_padding_10"
	        android:text="@string/my_assets"/>
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/right"
	        android:id="@+id/im_assets_right"
	        android:layout_alignParentRight="true"/>
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/tv_padding_5">
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/main_tab_my"
	        android:id="@+id/im_invest_left"
	        android:layout_alignParentTop="true"/>
	    <TextView
	        android:id="@+id/tv_invest" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/im_invest_right"
	        android:layout_toRightOf="@+id/im_invest_left"
	        style="@style/tv_padding_10"
	        android:text="@string/my_invest"/>
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/right"
	        android:id="@+id/im_invest_right"
	        android:layout_alignParentRight="true"/>
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/tv_padding_5">
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/main_tab_my"
	        android:id="@+id/im_security_left"
	        android:layout_alignParentTop="true"/>
	    <TextView
	        android:id="@+id/tv_security" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/im_security_right"
	        android:layout_toRightOf="@+id/im_security_left"
	        style="@style/tv_padding_10"
	        android:text="@string/my_security"/>
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/right"
	        android:id="@+id/im_security_right"
	        android:layout_alignParentRight="true"/>
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/tv_padding_5">
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/main_tab_my"
	        android:id="@+id/im_addressthin_left"
	        android:layout_alignParentTop="true"/>
	    <TextView
	        android:id="@+id/tv_addressthin" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/im_addressthin_right"
	        android:layout_toRightOf="@+id/im_addressthin_left"
	        style="@style/tv_padding_10"
	        android:text="@string/my_addressthin"/>
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/right"
	        android:id="@+id/im_addressthin_right"
	        android:layout_alignParentRight="true"/>
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/tv_padding_5">
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/main_tab_my"
	        android:id="@+id/im_coin_left"
	        android:layout_alignParentTop="true"/>
	    <TextView
	        android:id="@+id/tv_coin" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/im_coin_right"
	        android:layout_toRightOf="@+id/im_coin_left"
	        style="@style/tv_padding_10"
	        android:text="@string/my_coin"/>
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/right"
	        android:id="@+id/im_coin_right"
	        android:layout_alignParentRight="true"/>
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/tv_padding_5">
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/main_tab_my"
	        android:id="@+id/im_aboutus_left"
	        android:layout_alignParentTop="true"/>
	    <TextView
	        android:id="@+id/tv_aboutus" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/im_aboutus_right"
	        android:layout_toRightOf="@+id/im_aboutus_left"
	        style="@style/tv_padding_10"
	        android:text="@string/my_aboutus"/>
	    <ImageView android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:src="@drawable/right"
	        android:id="@+id/im_aboutus_right"
	        android:layout_alignParentRight="true"/>
	</RelativeLayout>
	
	<TextView
	    android:layout_marginTop="20dp" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="@style/tv_padding_10"
	    android:id="@+id/tv_exit"
	    android:text="@string/my_exit"
	    android:gravity="center_vertical|center_horizontal"
	    />
</LinearLayout>
